# sensors_framework-master

./: CMakeLists.txt
cmake/: CMakeLists.txt.sample  CMakeMacros.cmake  EnableC++11.cmake  EnableSSE.cmake  FindEigen3.cmake  FindFFMPEG.cmake  FindGLEW.cmake  FindGLIB2.cmake  (+16 more)
components/aruba/tests/: CMakeLists.txt
components/aruba/tests/inc/: test-constants.h
components/aruba/tests/src/: BetweenDayClusteringTester.cpp  FeatureProcessorTester.cpp  FeatureReaderTester.cpp  FileSeparatorTester.cpp  HierarchalAgglomerativeClusteringTester.cpp  HistClusterTester.cpp  HomeTester.cpp  PreprocessingStageTester.cpp  SensorEventProcessorTester.cpp  SimilarityMeasureTester.cpp  SorterProcessorTester.cpp  TimeWindowApproachTester.cpp  main.cpp
components/aruba/tests/test_data/config/: home_setup  sub_data
components/aruba/tests/test_data/config_per_test/BetweenDayClusteringTester/diff_patterns_default_outside_state/_5_10/2010-11-04/: locations_duration.txt  sensors_duration.txt
components/aruba/tests/test_data/config_per_test/BetweenDayClusteringTester/same_patterns_default_outside_state/_5_10/2010-11-04/: home_setup  locations_duration.txt  sensors_duration.txt
components/aruba/tests/test_data/config_per_test/BetweenDayClusteringTester/same_patterns_default_outside_state/_5_10/2010-11-05/: activity_per_window.txt  locations_duration.txt
components/aruba/tests/test_data/config_per_test/BetweenDayClusteringTester/same_patterns_default_state/_5_10/2010-11-04/: locations_duration.txt  sensors_duration.txt
components/aruba/tests/test_data/config_per_test/BetweenDayClusteringTester/same_patterns_default_state/_5_10/2010-11-05/: sensors_duration.txt
components/aruba/tests/test_data/config_per_test/BetweenDayClusteringTester/same_patterns_outside_state/_5_10/2010-11-04/: locations_duration.txt  sensors_duration.txt
components/aruba/tests/test_data/config_per_test/BetweenDayClusteringTester/same_patterns_outside_state/_5_10/2010-11-05/: locations_duration.txt  sensors_duration.txt
components/aruba/tests/test_data/config_per_test/BetweenDayClusteringTester/three_days_four_patterns/_5_10/2010-11-04/: activity_per_window.txt  locations_duration.txt
components/aruba/tests/test_data/config_per_test/BetweenDayClusteringTester/three_days_four_patterns/_5_10/2010-11-06/: activity_per_window.txt  locations_duration.txt  sensors_duration.txt
components/aruba/tests/test_data/config_per_test/BetweenDayClusteringTester/two_days_three_patterns/_5_10/2010-11-04/: locations_duration.txt  sensors_duration.txt
components/aruba/tests/test_data/config_per_test/FeatureReaderTester/result/2010-11-04/: locations_duration.txt  sensors_duration.txt  sequence_patterns.txt
components/aruba/tests/test_data/config_per_test/FileSeparatorTester/result/2010-11-05/: 2010-11-05.txt
components/aruba/tests/test_data/config_per_test/HierarchalAgglomerativeClusteringTester/between_day_cluster_different_two_patterns/_6000/: day_names.txt
components/aruba/tests/test_data/config_per_test/HierarchalAgglomerativeClusteringTester/between_day_cluster_same_two_patterns/_6000/: activity_per_window.txt  sensors_duration.txt  sequence_patterns.txt
components/aruba/tests/test_data/config_per_test/HierarchalAgglomerativeClusteringTester/diff_patterns_inside_outside_state/_6000/: sensors_duration.txt  sequence_patterns.txt
components/aruba/tests/test_data/config_per_test/HierarchalAgglomerativeClusteringTester/diff_patterns_inside_state/_6000/: sensors_duration.txt
components/aruba/tests/test_data/config_per_test/HierarchalAgglomerativeClusteringTester/same_patterns_inside_outside_state/_6000/: sequence_patterns.txt  time_index.txt
components/aruba/tests/test_data/config_per_test/HierarchalAgglomerativeClusteringTester/same_patterns_inside_state/_6000/: sensors_duration.txt  sequence_patterns.txt
components/aruba/tests/test_data/config_per_test/HistClusterTester/diff_sensors_inside_outside_pattern/2010-11-04/: locations_duration.txt  sensors_duration.txt  time-window-config
components/aruba/tests/test_data/config_per_test/HistClusterTester/diff_sensors_outside_pattern/2010-11-04/: activity_per_window.txt  home_setup  locations_duration.txt  sensors_duration.txt  sequence_patterns.txt
components/aruba/tests/test_data/config_per_test/HistClusterTester/different_activity_same_window/2010-11-04/: sensors_duration.txt
components/aruba/tests/test_data/config_per_test/HistClusterTester/different_cluster/2010-11-04/: locations_duration.txt
components/aruba/tests/test_data/config_per_test/HistClusterTester/result/2010-11-04/: locations_duration.txt
components/aruba/tests/test_data/config_per_test/HistClusterTester/result/2010-11-05/: locations_duration.txt  sensors_duration.txt
components/aruba/tests/test_data/config_per_test/HistClusterTester/result/2010-11-06/: locations_duration.txt  sensors_duration.txt
components/aruba/tests/test_data/config_per_test/HistClusterTester/same_cluster/2010-11-04/: locations_duration.txt  sensors_duration.txt
components/aruba/tests/test_data/config_per_test/HistClusterTester/same_sensors_inside_outside_pattern/2010-11-04/: home_setup  locations_duration.txt  sensors_duration.txt
components/aruba/tests/test_data/config_per_test/HistClusterTester/same_sensors_outside_pattern/2010-11-04/: locations_duration.txt  sensors_duration.txt
components/aruba/tests/test_data/config_per_test/PreprocessingStageTester/: activity_OFF_ON_sensor  activity_OFF_sensor  activity_ON_OFF_sensor  activity_ON_sensor  artificial_sensor_events_mili_seconds  artificial_sensor_events_seconds  data  five_full_days  off_sensor_only  one_full_day  temperature_sensor_only  three_full_days  two_full_days
components/aruba/tests/test_data/config_per_test/SensorEventProcessorTester/default_to_out_case/: time-window-config
components/aruba/tests/test_data/config_per_test/SimilarityMeasureTester/result/2010-11-04/: sensors_duration.txt
components/aruba/tests/test_data/config_per_test/SorterProcessorTester/radix_sort/2010-11-05/: activity_per_window.txt  sensors_duration.txt  sequence_patterns.txt
(+2322 files in other folders)
